# asahi-npu

./: .gitignore  Makefile  ane.h  ane_drv.c  ane_onnx.c  ane_onnx.h  ane_tm.c  dkms.conf  install_into_conda.txt
.github/workflows/: ane_extract.yml
bindings/python/dylib/: Makefile  libane_python.c
drm/: ane.h
examples/: README.md  onnx_submit.py  tinyllama_chat.py
libane/: Makefile  ane.c
libs/asahi_ane_llm/: README.md  pyproject.toml
libs/asahi_ane_llm/src/asahi_ane_llm/: __init__.py  device.py  metadata.py  submission.py
libs/asahi_ane_llm/src/asahi_ane_llm/microcode/: __init__.py  builder.py  schema.py
libs/asahi_ane_llm/src/asahi_ane_llm/tools/: __init__.py  build_microcode.py  convert_to_ane.py  convert_to_apple_npu.py  embed_metadata.py
scripts/: install.sh  install_kernel_headers.sh
tools/: build_microcode.py  build_microcode_requirements.json  build_microcode_requirements.toml  build_microcode_requirements.txt  build_microcode_requirements.yaml  convert_to_ane.py  convert_to_apple_npu.py
